Fixed background color bug behind sidebar

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,7 @@ html, *{
 }
 
 html{
-    background: #FFFFFF 0% 0% no-repeat padding-box;
+    background: #F8F8F8 0% 0% no-repeat padding-box;
     font-family: 'Poppins', sans-serif;
 }
 
